--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -77,74 +77,33 @@
 				</div>
 			</div>
 		</div>
-		<div class="feed-title" style="margin-top: 20px;">
+		<!-- <div class="feed-title" style="margin-top: 20px;">
 			<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
-		</div>
+		</div> -->
 		<div class="feed-inner">
 			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 
+	<div id="fb-root"></div>
 
 {% endblock %}
 
 
 {% block scripts %}
 	<script>
-	var collections = [];
-	var currentIdWork = null;
+	var actions = {{data|json|safe}};
+	(function (d, s, id) {
+		var js;
+		var fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s);
+		js.id = id;
+		js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=" + DataApp.fbAppID;
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
 	$(function() {
-		new APP.Viewer('actionItem', $('.feed-inner'), 'infinite', {{data|json|safe}});
-		var url = DataApp.currentUser.url + '/collection/all';
-	  $.post(url, {}, function (response) {
-	    if(response.status === 200) {
-	    collections = response.data.collections;
-	      var item = '<li class="collection" data-id="<%=id%>"><p><%=name%></p><i class="fa fa-check"></i></li>'
-	      for(var i= 0; i <collections.length; i++) {
-	        $('.collections').append($(_.template(item)(collections[i])));
-	      }
-	    }
-	  });
-
-		$('.collections').on("click", ".collection", function() {
-	    var id = parseInt($(this).data('id'),10);
-	    var index = collections.indexOf(id);
-	    if(index === -1) {
-	        collections.push(id);
-	        $(this).addClass('selected');
-	    }else {
-	      collections.splice(index, 1);
-	      $(this).removeClass('selected');
-	    }
-	  });
-
-		$('.save-collections').click(function() {
-	    $(this).hide();
-	    $('.save-collections-loading').show();
-	    var url = DataApp.currentUser.url + '/work/add_to_collection';
-	    var payload = {collections: JSON.stringify(collections), idWork: currentIdWork};
-	    $.post(url, payload, function (response) {
-	      if(response.status === 200) {
-	        $('.save-collections-loading').hide();
-	        $('.save-collections').show();
-	        $('#lean_overlay').trigger( "click" );
-	      }
-	    });
-	  });
-
-		$('.add-collection-form').submit(function(event){
-	    event.preventDefault();
-	    var url = DataApp.currentUser.url + '/collection/create';
-	    $.post(url, $(this).serialize(), function (response) {
-	      if(response.status === 200) {
-	        var item = '<li class="collection" data-id="<%=id%>"><p><%=name%></p><i class="fa fa-check"></i></li>'
-	        $('.collections').append($(_.template(item)(response.data.collection)));
-	      }
-	    });
-	  });
-
-		$("#go-collection-modal").leanModal();
-		$("#go-share-modal").leanModal();
+		new APP.FeedScreen();
 	})
 	</script>
 {% endblock %}
