--- a/app/views/partials/elements/carrousel-item.html
+++ b/app/views/partials/elements/carrousel-item.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="template-carrouselItem">
+<script type="text/template" id="template-carrousel-item">
   <a class="am-MoreImages" href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
     <div class="" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
   </a>
